- introduce version variables to simplify dependabot updates - make testing easier by allowing JDK 17 - guava is not needed - assume JDK 8 for local tests